# AppleWin

./: ANALYZE_PROJECT.md  HOWTO_COMPILE.md  PLAN_MODIFY.md  README.md
.github/: README.md
source/: CMakeLists.txt
source/Debugger/: Debug.cpp
source/debugserver/: CMakeLists.txt  CPUInfoProvider.cpp  CPUInfoProvider.h  DebugServerManager.cpp  DebugServerManager.h  DebugStreamProvider.cpp  DebugStreamProvider.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  INTEGRATION.md  IOInfoProvider.cpp  IOInfoProvider.h  InfoProvider.cpp  InfoProvider.h  JsonBuilder.cpp  JsonBuilder.h  MachineInfoProvider.cpp  MachineInfoProvider.h  MemoryInfoProvider.cpp  MemoryInfoProvider.h  README.md  SimpleTemplate.cpp  SimpleTemplate.h  test_server  test_server.cpp  test_template  test_template.cpp
source/frontends/common2/: commonframe.cpp
source/frontends/sdl/: README.md
source/linux/: context.cpp  linuxframe.cpp
